<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/nwplyng_logo_login">
    
    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login_using"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textStyle="italic" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#E3E3E3"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/facebook_login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical"
            android:layout_marginBottom="0.2dp">

            <ImageView
                android:id="@+id/facebook_login_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/facebook_main_logo" />

            <TextView
                android:id="@+id/btn_fb"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/facebook_login_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/facebook"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/twitter_login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical"
            android:layout_marginBottom="0.2dp" >

            <ImageView
                android:id="@+id/twitter_login_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/twitter_main_logo" />

            <TextView
                android:id="@+id/btn_twitter"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/twitter_login_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/twitter"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/foursquare_login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/foursquare_login_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/foursquare_main_logo" />

            <TextView
                android:id="@+id/btn_foursquare"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/foursquare_login_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/foursquare"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>