<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nwplyng_gray">
    
    <RelativeLayout
        android:id="@+id/topbar_addfriendAdvanced"
        android:layout_width="fill_parent"
        android:layout_height="47dip"
        android:gravity="center_vertical"
        android:background="@drawable/blank_navigation">
        
        <Button 
            android:id="@+id/addFriendAdvancedBackButton"
            android:layout_width="50dp"
            android:layout_height="47dp"
       		android:layout_centerVertical="true"
       		android:background="@drawable/left_arrow"/>
        
        <TextView 
            android:id="@+id/add_friend_select_heading"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/addFriendAdvancedBackButton"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold"/>
        
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar_addfriendAdvanced"
        android:layout_marginTop="15dp"
        android:text="@string/find_friends"
        android:paddingLeft="15dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/nwplyng_alphabet"/>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:id="@+id/facebook_select_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical"
            android:layout_marginBottom="0.2dp">

            <ImageView
                android:id="@+id/facebook_select_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/facebook_main_logo" />

            <TextView
                android:id="@+id/select_btn_fb"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/facebook_select_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/facebook"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/twitter_select_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical"
            android:layout_marginBottom="0.2dp" >

            <ImageView
                android:id="@+id/twitter_select_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/twitter_main_logo" />

            <TextView
                android:id="@+id/select_btn_twitter"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/twitter_select_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/twitter"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/foursquare_select_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/foursquare_select_logo"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/foursquare_main_logo" />

            <TextView
                android:id="@+id/select_btn_foursquare"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/foursquare_select_logo"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/foursquare"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
        
	</LinearLayout>
        
    <TextView 
        android:id="@+id/textView2"
        android:layout_below="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
       	android:text="@string/search_users"
       	android:paddingLeft="15dp"
       	android:textSize="19sp"
       	android:textStyle="bold"
       	android:textColor="@color/nwplyng_alphabet"/>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:id="@+id/users_select_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_back_ground"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/select_btn_users"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/search_nwplyng"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
        
	</LinearLayout>

</RelativeLayout>